--- a/frontend/css/weekly-schedule.css
+++ b/frontend/css/weekly-schedule.css
@@ -129,3 +129,11 @@ select.default {
 select.assigned {
     background-color: rgb(238, 230, 144); /* Puedes cambiar a cualquier color que prefieras */
 }
+
+.randomize-button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 1em;
+    margin-left: 5px;
+}
