--- a/frontend/css/weekly-schedule.css
+++ b/frontend/css/weekly-schedule.css
@@ -20,6 +20,7 @@ table {
     width: 100%;
     border-collapse: collapse;
     margin-top: 20px;
+    table-layout: fixed; /* Hace que las columnas tengan un ancho fijo */
 }
 
 th, td {
@@ -31,6 +32,14 @@ th, td {
 th {
     background-color: #0056b3;
     color: white;
+}
+
+th.work-site {
+    width: 250px; /* Ancho fijo para la primera columna */
+}
+
+th:not(.work-site) {
+    width: calc((100% - 250px) / 5); /* Ancho distribuido entre las columnas restantes */
 }
 
 td.droppable {
@@ -52,7 +61,8 @@ td.separator-thick {
 }
 
 td.work-site {
-    font-weight: bold 600;
+    font-weight: 600;
+    width: 250px; /* Ancho fijo para la primera columna */
 }
 
 select {
@@ -93,7 +103,7 @@ select {
     border-radius: 5px;
 }
 
-.instructions h2 {
+.instructions h3 {
     margin-top: 0;
 }
 
@@ -109,17 +119,11 @@ select {
 }
 
 .instructions button {
-    background-color: #0056b3;
-    color: white;
+    background: none;
     border: none;
-    padding: 10px 15px;
     cursor: pointer;
-    border-radius: 5px;
-    margin-left: 10px;
-}
-
-.instructions button:hover {
-    background-color: #004494;
+    font-size: 1em;
+    margin-left: 5px;
 }
 
 select.default {
@@ -130,10 +134,6 @@ select.assigned {
     background-color: rgb(238, 230, 144); /* Puedes cambiar a cualquier color que prefieras */
 }
 
-.randomize-button {
-    background: none;
-    border: none;
-    cursor: pointer;
-    font-size: 1em;
-    margin-left: 5px;
+.inform {
+    font-weight:600;
 }
