--- a/frontend/css/weekly-schedule.css
+++ b/frontend/css/weekly-schedule.css
@@ -175,7 +175,7 @@ select.default {
 }
 
 select.assigned {
-    background-color: rgb(238, 230, 144); /* Puedes cambiar a cualquier color que prefieras */
+    background-color: rgb(238, 230, 144); 
 }
 
 .inform {
