--- a/frontend/css/base.css
+++ b/frontend/css/base.css
@@ -58,3 +58,11 @@ ul li a img {
 ul li a:hover {
     text-decoration: underline;
 }
+
+/* Estilo específico para el texto del timestamp */
+.timestamp {
+    font-size: 14px;
+    color: #555;
+    font-style: italic;
+    margin-left: 1.5rem;
+}
