--- a/frontend/css/login.css
+++ b/frontend/css/login.css
@@ -10,13 +10,13 @@
     text-align: center;
 }
 
-.form-container h2 {
+.form-container h2, h3 {
     margin-bottom: 20px;
     color: #0056b3;
 }
 
 /* Estilos para los grupos de entrada */
-.input-group {
+.input-group  {
     margin-bottom: 20px;
     text-align: left;
 }
@@ -28,7 +28,7 @@
     font-weight: bold;
 }
 
-.input-group input {
+.input-group input, textarea {
     width: 100%;
     padding: 10px;
     border: 1px solid #ddd;
@@ -71,7 +71,7 @@
 }
 
 /* Estilos para botones */
-.login-button, .register-button, .recover-button, .main-menu-button,.reset-button {
+.login-button, .register-button, .recover-button, .main-menu-button,.reset-button, .submit-button {
     width: 100%;
     padding: 10px;
     background-color: #0069d9;
