--- a/frontend/css/admin.css
+++ b/frontend/css/admin.css
@@ -28,6 +28,19 @@
     margin-right: 0rem;
 }
 
-ul{
-    margin-left: -0.5rem;
+.vacation-start, .vacation-end {
+    width: 80px; /* Ajusta este valor según el ancho deseado */
+    padding: 1px;
+    font-size: 14px;
+}
+
+.vacation-start, .vacation-end {
+    /* Simular el ícono de calendario típico del navegador */
+    background: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-calendar"%3E%3Crect x="3" y="4" width="18" height="18" rx="2" ry="2"%3E%3C/rect%3E%3Cline x1="16" y1="2" x2="16" y2="6"%3E%3C/line%3E%3Cline x1="8" y1="2" x2="8" y2="6"%3E%3C/line%3E%3Cline x1="3" y1="10" x2="21" y2="10"%3E%3C/line%3E%3C/svg%3E') no-repeat right 10px center;
+    background-size: 20px 20px;
+    padding-right: 30px; /* Aumentar padding para dejar espacio al ícono */
+    padding-left: 5px;
+    border: 1px solid rgb(118, 118, 118);
+    height: 22px;
+    border-radius: 4px;
 }
