table for cell phone

--- a/frontend/css/weekly-schedule.css
+++ b/frontend/css/weekly-schedule.css
@@ -145,6 +145,7 @@ table.assigments-inform {
     padding: 20px;
     margin-bottom: 20px;
     border-radius: 5px;
+    overflow-x: auto;
 }
 
 .instructions, .schedule-assistant h3 {
