--- a/frontend/css/media.css
+++ b/frontend/css/media.css
@@ -96,7 +96,7 @@
     th.work-site::after, td.work-site::after {
         content: '';
         position: absolute;
-        top: 0;
+        top: -4px; /* Expande hacia arriba para cubrir el borde superior */
         left: -23px; /* Ajusta según el ancho deseado */
         width: 21px; /* Ancho del "relleno" */
         height: 100%;
@@ -104,7 +104,7 @@
         border-right: 2px solid white;
         border-left: 2px solid white; /* Borde derecho blanco para ocultar el borde de la celda siguiente */
         border-top: 2px solid white; /* Borde superior blanco */
-        border-bottom: 2px solid white; /* Borde inferior blanco */
+        border-bottom: 8px solid white; /* Borde inferior blanco */
         z-index: 9; /* Coloca el pseudo-elemento por detrás del contenido de la celda */
     }
 
